--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "type": "module",
   "license": "MIT",
+  "engines": {
+    "node": "20.x"
+  },
   "homepage": "https://github.com/kwchang0831/svelte-qwer",
   "repository": {
     "type": "git",
